# Kulyk-goit-PythonWeb-HW-10

./: .gitignore  pyproject.toml  requirements.txt
hw_project/: readme.txt
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: admin.py  forms.py  models.py  test.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_author_fullname.py
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  description.html  index.html  tags.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  urls.py  views.py  коментарі.txt
hw_project/users/templates/users/: signin.html  signup.html
hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py  total_list_from_db.py
